--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
+
 {
   "name": "nextjs-app",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p $PORT",  
     "build": "next build",
-    "start": "next start"
+    "start": "next start" 
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
